force-app/main/default/objects/TAG_Sub_Project__c/TAG_Sub_Project__c.object-meta.xml
<CustomObject>
    <label>TAG Sub-Project</label>
    <nameField>
        <label>TAG Sub-Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TAG Sub-Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>