force-app/main/default/objects/TAG_Sub_Project__c/fields/Biology_Updates__c.field-meta.xml
<CustomField>
    <fullName>Biology_Updates__c</fullName>
    <label>Biology Updates</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>