force-app/main/default/objects/TAG_Sub_Project__c/fields/Broad_Status__c.field-meta.xml
<CustomField>
    <fullName>Broad_Status__c</fullName>
    <label>Broad Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Target Validation</fullName>
            </value>
            <value>
                <fullName>Approved Target</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Target Deprioritized</fullName>
            </value>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>Analysis</fullName>
                <isActive>false</isActive>
                <label>Analysis</label>
            </value>
            <value>
                <fullName>Complete</fullName>
                <isActive>false</isActive>
                <label>Complete</label>
            </value>
            <value>
                <fullName>Deep Dive</fullName>
                <isActive>false</isActive>
                <label>Deep Dive</label>
            </value>
            <value>
                <fullName>In Queue (HTP)</fullName>
                <isActive>false</isActive>
                <label>In Queue (HTP)</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
                <isActive>false</isActive>
                <label>On Hold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>