force-app/main/default/objects/TAG_Sub_Project__c/fields/Cohort2__c.field-meta.xml
<CustomField>
    <fullName>Cohort2__c</fullName>
    <label>Cohort</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Collaborator_Key</valueSetName>
    </valueSet>
</CustomField>