force-app/main/default/objects/TAG_Sub_Project__c/fields/Cohort__c.field-meta.xml
<CustomField>
    <fullName>Cohort__c</fullName>
    <label>Cohort [LEGACY]</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accelerated Cures</fullName>
            </value>
            <value>
                <fullName>AECOM</fullName>
            </value>
            <value>
                <fullName>Ancestry</fullName>
            </value>
            <value>
                <fullName>AncestryDNA</fullName>
            </value>
            <value>
                <fullName>Bariatric surgery, GHS</fullName>
            </value>
            <value>
                <fullName>BCH</fullName>
            </value>
            <value>
                <fullName>Boston Childrens</fullName>
            </value>
            <value>
                <fullName>CCHMC</fullName>
            </value>
            <value>
                <fullName>CNCD</fullName>
            </value>
            <value>
                <fullName>EcoGene 21</fullName>
            </value>
            <value>
                <fullName>Edinburgh</fullName>
            </value>
            <value>
                <fullName>FinnGen</fullName>
            </value>
            <value>
                <fullName>GGC</fullName>
            </value>
            <value>
                <fullName>GHS</fullName>
            </value>
            <value>
                <fullName>GHS 145K</fullName>
            </value>
            <value>
                <fullName>GHS for DRIFT</fullName>
            </value>
            <value>
                <fullName>Iowa</fullName>
            </value>
            <value>
                <fullName>IU</fullName>
            </value>
            <value>
                <fullName>Kiel</fullName>
            </value>
            <value>
                <fullName>Leuven</fullName>
            </value>
            <value>
                <fullName>Mario Negri</fullName>
            </value>
            <value>
                <fullName>Mayo</fullName>
            </value>
            <value>
                <fullName>Michigan</fullName>
            </value>
            <value>
                <fullName>Mt. Sinai</fullName>
            </value>
            <value>
                <fullName>NHGRI</fullName>
            </value>
            <value>
                <fullName>NIDDK</fullName>
            </value>
            <value>
                <fullName>NIMH</fullName>
            </value>
            <value>
                <fullName>Northwestern</fullName>
            </value>
            <value>
                <fullName>Oxford</fullName>
            </value>
            <value>
                <fullName>TAICHI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>