force-app/main/default/objects/TAG_Sub_Project__c/fields/Deprioritized_For_Target_Nomination__c.field-meta.xml
<CustomField>
    <fullName>Deprioritized_For_Target_Nomination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deprioritized For Target Nomination</label>
    <type>Checkbox</type>
</CustomField>