force-app/main/default/objects/TAG_Sub_Project__c/fields/Development_Program__c.field-meta.xml
<CustomField>
    <fullName>Development_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Development Program</label>
    <type>Checkbox</type>
</CustomField>