force-app/main/default/objects/TAG_Sub_Project__c/fields/Functional_Models__c.field-meta.xml
<CustomField>
    <fullName>Functional_Models__c</fullName>
    <label>Functional Models</label>
    <length>255</length>
    <type>Text</type>
</CustomField>