force-app/main/default/objects/TAG_Sub_Project__c/fields/HPT_Date__c.field-meta.xml
<CustomField>
    <fullName>HPT_Date__c</fullName>
    <inlineHelpText>Date of High Priority Topic</inlineHelpText>
    <label>HPT Date</label>
    <type>Date</type>
</CustomField>