force-app/main/default/objects/TAG_Sub_Project__c/fields/Multi_TFA_Interest__c.field-meta.xml
<CustomField>
    <fullName>Multi_TFA_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi-TFA Interest</label>
    <type>Checkbox</type>
</CustomField>