force-app/main/default/objects/TAG_Sub_Project__c/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <label>Next Steps</label>
    <length>3999</length>
    <type>Html</type>
</CustomField>