force-app/main/default/objects/TAG_Sub_Project__c/fields/Parent_TAG_Project__c.field-meta.xml
<CustomField>
    <fullName>Parent_TAG_Project__c</fullName>
    <label>Parent TAG Project</label>
    <referenceTo>TAG_Project__c</referenceTo>
    <relationshipLabel>TAG Sub-Projects</relationshipLabel>
    <relationshipName>TAG_Sub_Projects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>