force-app/main/default/objects/TAG_Sub_Project__c/fields/Phenotype__c.field-meta.xml
<CustomField>
    <fullName>Phenotype__c</fullName>
    <label>Indication</label>
    <length>100</length>
    <type>Text</type>
</CustomField>