force-app/main/default/objects/TAG_Sub_Project__c/fields/Potential_Modality__c.field-meta.xml
<CustomField>
    <fullName>Potential_Modality__c</fullName>
    <label>Potential Modality</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Antibody</fullName>
            </value>
            <value>
                <fullName>siRNA</fullName>
            </value>
            <value>
                <fullName>Small Molecule</fullName>
            </value>
            <value>
                <fullName>Bispec/ncADC/other</fullName>
            </value>
            <value>
                <fullName>Gene Editing</fullName>
            </value>
            <value>
                <fullName>Approved Target</fullName>
                <isActive>false</isActive>
                <label>Approved Target</label>
            </value>
            <value>
                <fullName>Broad Status</fullName>
                <isActive>false</isActive>
                <label>Broad Status</label>
            </value>
            <value>
                <fullName>Development</fullName>
                <isActive>false</isActive>
                <label>Development</label>
            </value>
            <value>
                <fullName>Discovery</fullName>
                <isActive>false</isActive>
                <label>Discovery</label>
            </value>
            <value>
                <fullName>Potential Target Nomination</fullName>
                <isActive>false</isActive>
                <label>Potential Target Nomination</label>
            </value>
            <value>
                <fullName>Target Deprioritized</fullName>
                <isActive>false</isActive>
                <label>Target Deprioritized</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>