force-app/main/default/objects/TAG_Sub_Project__c/fields/Project_Aim__c.field-meta.xml
<CustomField>
    <fullName>Project_Aim__c</fullName>
    <label>Key Questions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>