force-app/main/default/objects/TAG_Sub_Project__c/fields/RGC_AG__c.field-meta.xml
<CustomField>
    <fullName>RGC_AG__c</fullName>
    <label>RGC AG</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adam Locke</fullName>
            </value>
            <value>
                <fullName>Alex Li</fullName>
            </value>
            <value>
                <fullName>Carlo Sidore</fullName>
            </value>
            <value>
                <fullName>Charlie Paulding</fullName>
            </value>
            <value>
                <fullName>Cris Van Hout</fullName>
            </value>
            <value>
                <fullName>Dylan Ferreira</fullName>
            </value>
            <value>
                <fullName>Eli Stahl</fullName>
            </value>
            <value>
                <fullName>Jack Kosmicki</fullName>
            </value>
            <value>
                <fullName>Jonathan Marchini</fullName>
            </value>
            <value>
                <fullName>Joshua Backman</fullName>
            </value>
            <value>
                <fullName>Lauren Gurski</fullName>
            </value>
            <value>
                <fullName>Manuel Ferreira</fullName>
            </value>
            <value>
                <fullName>Maria Suciu</fullName>
            </value>
            <value>
                <fullName>Michael Kessler</fullName>
            </value>
            <value>
                <fullName>Olu Sosina</fullName>
            </value>
            <value>
                <fullName>Parsa Akbari</fullName>
            </value>
            <value>
                <fullName>Shane McCarthy</fullName>
            </value>
            <value>
                <fullName>Suganthi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>