force-app/main/default/objects/TAG_Sub_Project__c/fields/RGC_RPM_Contact__c.field-meta.xml
<CustomField>
    <fullName>RGC_RPM_Contact__c</fullName>
    <label>RGC-RPM Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jason Mighty</fullName>
            </value>
            <value>
                <fullName>Michelle LeBlanc</fullName>
            </value>
            <value>
                <fullName>Larizbeth Romero</fullName>
            </value>
            <value>
                <fullName>Ashley Paynter</fullName>
            </value>
            <value>
                <fullName>Esteban Chen</fullName>
                <isActive>false</isActive>
                <label>Esteban Chen</label>
            </value>
            <value>
                <fullName>Nirupama Nishtala</fullName>
                <isActive>false</isActive>
                <label>Nirupama Nishtala</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>