force-app/main/default/objects/TAG_Sub_Project__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RGC Internal Review</fullName>
            </value>
            <value>
                <fullName>TAG Meeting</fullName>
            </value>
            <value>
                <fullName>Weekly Review/Future Target Discussion</fullName>
            </value>
            <value>
                <fullName>RGC HPT</fullName>
            </value>
            <value>
                <fullName>Nomination</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>