force-app/main/default/objects/TAG_Sub_Project__c/fields/TAG_Sub_Project_Name_Link__c.field-meta.xml
<CustomField>
    <fullName>TAG_Sub_Project_Name_Link__c</fullName>
    <label>Biology Updates [LEGACY]</label>
    <type>Url</type>
</CustomField>