force-app/main/default/objects/TAG_Sub_Project__c/fields/TAG_SubProject_Name_Link_RT__c.field-meta.xml
<CustomField>
    <fullName>TAG_SubProject_Name_Link_RT__c</fullName>
    <label>Genetics Deck</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>