force-app/main/default/objects/TAG_Sub_Project__c/fields/Target_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Approval_Date__c</fullName>
    <description>Date of Target Approval</description>
    <label>Target Approval Date</label>
    <type>Date</type>
</CustomField>