force-app/main/default/objects/TAG_Sub_Project__c/fields/Target_Nomination_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Nomination_Date__c</fullName>
    <label>Target Nomination Date</label>
    <type>Date</type>
</CustomField>