force-app/main/default/objects/TAG_Sub_Project__c/fields/TherapeuticArea__c.field-meta.xml
<CustomField>
    <fullName>TherapeuticArea__c</fullName>
    <label>Therapeutic Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TFA</valueSetName>
    </valueSet>
</CustomField>