force-app/main/default/objects/TAG_Sub_Project__c/fields/TherapeuticAreaold__c.field-meta.xml
<CustomField>
    <fullName>TherapeuticAreaold__c</fullName>
    <label>Therapeutic Areaold</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Therapeutic_Area</valueSetName>
    </valueSet>
</CustomField>