force-app/main/default/objects/TAG_Sub_Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Broad_Status__c</columns>
    <columns>TherapeuticArea__c</columns>
    <columns>Parent_TAG_Project__c</columns>
    <columns>TAG__c</columns>
    <columns>Key_Findings__c</columns>
    <columns>Project_Aim__c</columns>
    <columns>Phenotype__c</columns>
    <columns>Stage__c</columns>
    <columns>Activity_Date__c</columns>
    <columns>Next_Steps__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>