force-app/main/default/objects/TAG_Sub_Project__c/listViews/Onc.listView-meta.xml
<ListView>
    <fullName>Onc</fullName>
    <columns>NAME</columns>
    <columns>Parent_TAG_Project__c</columns>
    <columns>TherapeuticArea__c</columns>
    <columns>TAG_SubProject_Name_Link_RT__c</columns>
    <columns>Broad_Phenotype__c</columns>
    <columns>Phenotype__c</columns>
    <columns>Project_Aim__c</columns>
    <columns>Biology_Updates__c</columns>
    <columns>Activity_Date__c</columns>
    <columns>Key_Findings__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TAG__c</field>
        <operation>includes</operation>
        <value>Oncology</value>
    </filters>
    <label>Onc</label>
</ListView>