force-app/main/default/objects/TAG_Sub_Project__c/listViews/X2023_Portfolio.listView-meta.xml
<ListView>
    <fullName>X2023_Portfolio</fullName>
    <columns>NAME</columns>
    <columns>Activity_Date__c</columns>
    <columns>Next_Steps__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Activity_Date__c</field>
        <operation>equals</operation>
        <value>THIS_FISCAL_YEAR</value>
    </filters>
    <label>Current Year Portfolio</label>
</ListView>